--- a/frontend/expense-tracker/package.json
+++ b/frontend/expense-tracker/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.1",
     "next": "14.1.0",
     "react": "^18",
