--- a/frontend/expense-tracker/package.json
+++ b/frontend/expense-tracker/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
